Wait for font to load, fix center alignment and syllable counts

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -38,17 +38,20 @@ h1 {
   opacity: 0.4;
 }
 
-#container {
-  display: grid;
-  margin-left: 56px;
-  margin-right: 56px;
+#content {
+  text-align: center;
+}
+
+#grid-container {
+  display: inline-grid;
+  grid-template-columns: 20px auto;
+  grid-column-gap: 16px;
+  text-align: left;
 }
 
 #syllables {
   grid-column: 1;
-  width: 20px;
   text-align: right;
-  justify-self: end;
   color: #D3D3D3;
   font-size: 12px;
   line-height: 64px;
